--- a/modules/contract_group/doc/en/CHANGELOG
+++ b/modules/contract_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11862 Improve subsidiaries label in the organization hierarchy
 * BUG#11766 Use contract field of organization's covered elements to determine whether it is terminated or not
 
 Version 2.4 - 2019-04-12
