account_cog: Add user informations and create / write modifications in form view (#2852)
Fix #00000

--- a/modules/account_cog/doc/en/CHANGELOG
+++ b/modules/account_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#11198 Add create date and write date, create user also on the reconciliation postponement form views
 * OTH#11198 Iteration on reconciliation postponement feature
 
 Version 2.4 - 2019-04-12
