--- a/modules/account_cog/doc/fr/CHANGELOG
+++ b/modules/account_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#11198 Ajout de la date de création et de modification ainsi que l'utilisateur sur les vues de report de lettrage
 * OTH#11198 Itération sur la fonctionnalité de report de lettrage
 
 Version 2.4 - 2019-04-12
