--- a/modules/commission_insurance_prepayment/doc/en/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Iteration on commission computation description
+
 Version 2.4 - 2019-04-12
 * OTH#00000 Add hook for not computing prepayment condition
 * BUG#11171 Avoid leap year problem on prepayment calcul
