--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11767 Make sure default tables are up to date
+
 Version 2.4 - 2019-04-12
 * BUG#11327 Fix crash when calculating salary mode if no benefit found on service
 * BUG#11007 Do not automatically save services when calling init_salaries
