offered: Add sequence_order and consistency checks on extra_data (#2840)
Fix #11837

--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -136,6 +136,10 @@ msgctxt "field:extra_data,selection_sorted:"
 msgid "Selection Sorted"
 msgstr "Sélection Triée"
 
+msgctxt "field:extra_data,sequence_order:"
+msgid "Sequence Order"
+msgstr "Ordre d'affichage"
+
 msgctxt "field:extra_data,string:"
 msgid "Name"
 msgstr "Nom"
@@ -931,6 +935,14 @@ msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
 msgctxt "help:extra_data,selection_sorted:"
 msgid "If the selection must be sorted on label"
 msgstr "Si la sélection doit être triée par le libéllé"
+
+msgctxt "help:extra_data,sequence_order:"
+msgid ""
+"The value that will be used to define the order in which the fields will be "
+"displayed client side"
+msgstr ""
+"Cette valeur sera utilisée pour ordonner les différentes données "
+"complémentaires lors de l'affichage utilisateur"
 
 msgctxt "help:extra_data,tags:"
 msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
