--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11837 Ajout d'une séquence pour l'ordre des données complémentaires
 * OTH#00000 Ajout d'un message si la donnée complémentaire n'est pas trouvée
 
 Version 2.4 - 2019-04-12
