--- a/modules/third_party_right_management/locale/fr.po
+++ b/modules/third_party_right_management/locale/fr.po
@@ -4,7 +4,7 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:contract.option.third_party_period:"
 msgid "Third Party Period overlaps"
-msgstr "Les Périodes de Délégation se chevauchent"
+msgstr "Les périodes de délégation se chevauchent"
 
 msgctxt "error:third_party_manager.protocol:"
 msgid "The code must be unique"
@@ -12,15 +12,15 @@ msgstr "Le code doit être unique"
 
 msgctxt "field:contract.option,third_party_periods:"
 msgid "Third Party Periods"
-msgstr "Périodes de Délégation"
+msgstr "Périodes de délégation"
 
 msgctxt "field:contract.option.third_party_period,create_date:"
 msgid "Create Date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:contract.option.third_party_period,create_date_:"
 msgid "Creation date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:contract.option.third_party_period,create_uid:"
 msgid "Create User"
@@ -60,7 +60,7 @@ msgstr "Date d'envoi"
 
 msgctxt "field:contract.option.third_party_period,start_date:"
 msgid "Start Date"
-msgstr "Date d'Effet"
+msgstr "Date d'effet"
 
 msgctxt "field:contract.option.third_party_period,status:"
 msgid "Status"
@@ -80,11 +80,11 @@ msgstr "XML Id"
 
 msgctxt "field:endorsement.part,third_party_protocols:"
 msgid "Third Party Protocols"
-msgstr "Protocoles des Délégataires"
+msgstr "Protocoles de délégation"
 
 msgctxt "field:offered.option.description,third_party_protocols:"
 msgid "Third Party Protocols"
-msgstr "Protocoles des Délégataires"
+msgstr "Protocoles de délégation"
 
 msgctxt "field:third_party_manager.protocol,code:"
 msgid "Code"
@@ -96,11 +96,11 @@ msgstr "Garanties"
 
 msgctxt "field:third_party_manager.protocol,create_date:"
 msgid "Create Date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:third_party_manager.protocol,create_date_:"
 msgid "Creation date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:third_party_manager.protocol,create_uid:"
 msgid "Create User"
@@ -128,11 +128,11 @@ msgstr "Règle"
 
 msgctxt "field:third_party_manager.protocol,rule_extra_data:"
 msgid "Rule Extra Data"
-msgstr "Règle Données complémentaires"
+msgstr "Règle données complémentaires"
 
 msgctxt "field:third_party_manager.protocol,technical_protocol:"
 msgid "Technical Protocol"
-msgstr "Protocole Technique"
+msgstr "Protocole technique"
 
 msgctxt "field:third_party_manager.protocol,third_party_manager:"
 msgid "Third Party Manager"
@@ -156,11 +156,11 @@ msgstr "XML Id"
 
 msgctxt "field:third_party_manager.protocol-event.type,create_date:"
 msgid "Create Date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:third_party_manager.protocol-event.type,create_date_:"
 msgid "Creation date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:third_party_manager.protocol-event.type,create_uid:"
 msgid "Create User"
@@ -202,12 +202,12 @@ msgstr "Offre"
 msgctxt ""
 "field:third_party_manager.protocol-offered.option.description,create_date:"
 msgid "Create Date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt ""
 "field:third_party_manager.protocol-offered.option.description,create_date_:"
 msgid "Creation date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt ""
 "field:third_party_manager.protocol-offered.option.description,create_uid:"
@@ -253,15 +253,15 @@ msgstr "Identifiant"
 
 msgctxt "field:third_party_manager.recompute_period.ask_date,periods:"
 msgid "Last Periods"
-msgstr "Dernières Périodes"
+msgstr "Dernières périodes"
 
 msgctxt "field:third_party_manager_protocol-endorsement_part,create_date:"
 msgid "Create Date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:third_party_manager_protocol-endorsement_part,create_date_:"
 msgid "Creation date"
-msgstr "Date de Création"
+msgstr "Date de création"
 
 msgctxt "field:third_party_manager_protocol-endorsement_part,create_uid:"
 msgid "Create User"
@@ -298,7 +298,7 @@ msgstr "XML Id"
 
 msgctxt "model:contract.option.third_party_period,name:"
 msgid "Third Party Period"
-msgstr "Période de Délégation"
+msgstr "Période de délégation"
 
 msgctxt "model:ir.action,name:act_third_party_manager_protocol"
 msgid "Protocols"
@@ -306,11 +306,11 @@ msgstr "Protocoles"
 
 msgctxt "model:ir.action,name:act_third_party_period_relate"
 msgid "Third Party Periods"
-msgstr "Périodes de Délégation"
+msgstr "Périodes de délégation"
 
 msgctxt "model:ir.action,name:wizard_recompute_period"
 msgid "Recompute Period"
-msgstr "Re-calcul des Périodes"
+msgstr "Re-calcul des périodes"
 
 msgctxt "model:ir.ui.menu,name:menu_third_party_manager_protocol_form"
 msgid "Protocols"
@@ -318,23 +318,23 @@ msgstr "Protocoles"
 
 msgctxt "model:third_party_manager.protocol,name:"
 msgid "Third Party Management Protocol"
-msgstr "Protocole des Délégataires"
+msgstr "Protocole de délégation"
 
 msgctxt "model:third_party_manager.protocol-event.type,name:"
 msgid "Third Party Management Protocol - Event Type"
-msgstr "Protocole des Délégataires - Type d'Événement"
+msgstr "Protocole de délégation - Type d'Événement"
 
 msgctxt "model:third_party_manager.protocol-offered.option.description,name:"
 msgid "Third Party Protocol - Coverage"
-msgstr "Protocole des Délégataires - Couverture"
+msgstr "Protocole de délégation - Couverture"
 
 msgctxt "model:third_party_manager.recompute_period.ask_date,name:"
 msgid "Recompute the periods - Ask Date"
-msgstr "Re-calcul des Périodes - Date"
+msgstr "Re-calcul des périodes - Date"
 
 msgctxt "model:third_party_manager_protocol-endorsement_part,name:"
 msgid "Third Party Protocol - Endorsement Part"
-msgstr "Protocole des Délégataires - Avenants"
+msgstr "Protocole de délégation - Avenants"
 
 msgctxt "selection:contract.option.third_party_period,status:"
 msgid "Rejected"
