--- a/modules/bank_cog/doc/fr/CHANGELOG
+++ b/modules/bank_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Correction de la génération de données bancaires en utilisant le fichier coog par défaut
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * BUG#9441 Les banques ne peuvent pas être des personnes physiques
