--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11891 Correction d'un crash lors de l'exécution de l'assistant 'Gestion des options' depuis un élément couvert.
 * BUG#11141 Gérer la sélection des couvertures optionnelles au niveau contrat dans l'assistant de gestion des options
 * BUG#11036 Vérification des chevauchements sur les élements couverts ayant le même parent et la même personne
 * OTH#0000 Correction de l'apparition du message d'erreur de chevauchement au même nombre que les éléments couverts indépendamment de s'il y avait effectivement chevauchement pour tous
