--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11917 Fix display of subscriptions where there is only one (regression from 11724 )
 * BUG#11724 Fix display of person subscriptions when there are serveral subscriptions
 * BUG#11799 Fix subscription creation batch for person who already has a subscription for an other siren 
 * BUG#11675 Allow manual individual subscription request for persons affiliated via a subsidiary
