--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11890 Correction des conditions d'inscription automatique en présence de franchise
 * BUG#11917 Correction de l'affichage des inscriptions dans le cas où il y en a une (régression de 11724)
 * BUG#11724 Correction de l'affichage des inscriptions dans le cas où il y en a plusieurs
 * BUG#11799 Correction du batch de création des inscriptions pour les personnes déjà inscrites sous un autre siren
