claim: Identifier at the bank account level to be used for benefit repayments (#2837)
Fix #11832

--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11832 Use an identifier at the bank account for refund of benefits
 * BUG#11471 Fix Method Resolution Order of the object Claim
 
 Version 2.4 - 2019-04-12
