--- a/modules/claim/locale/fr.po
+++ b/modules/claim/locale/fr.po
@@ -1307,9 +1307,17 @@ msgctxt "field:option.description-benefit,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:party.party,claim_bank_account:"
+msgid "Claim Bank account"
+msgstr "Compte pour les prestations"
+
 msgctxt "field:party.party,claims:"
 msgid "Claims"
 msgstr "Sinistres"
+
+msgctxt "field:party.party,forced_claim_bank_account:"
+msgid "Forced Claim Bank Account"
+msgstr "Compte bancaire forcé"
 
 msgctxt "field:party.party,last_claim:"
 msgid "Last Claim"
@@ -1377,8 +1385,8 @@ msgstr ""
 msgctxt "help:benefit,extra_data_def:"
 msgid ""
 "List of extra data that will be requested for delivering this benefit in a "
-"claim. These data can be used in rule engine and will be versioned and "
-"store on the delivered service"
+"claim. These data can be used in rule engine and will be versioned and store"
+" on the delivered service"
 msgstr ""
 "Liste des données complémentaires qui seront demandées lorsque la prestation"
 " sera exercée dans un sinistre. Ces données peuvent être utilisées dans le "
@@ -1402,7 +1410,7 @@ msgid "If true, it will be possible to deliver the same benefit several times"
 msgstr "Si cochée, la prestation peut être délivrée plusieurs fois "
 
 msgctxt "help:benefit,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
@@ -1452,6 +1460,14 @@ msgid ""
 msgstr ""
 "Vrai si au moins une des prestations du produit doit être payée au "
 "souscripteur"
+
+msgctxt "help:party.party,claim_bank_account:"
+msgid ""
+"By default, the first valid account on the contract. Can be forced manually."
+" If nothing selected it will take the default one"
+msgstr ""
+"Par défaut, le premier compte valide sur le contrat. Peut être forcé "
+"manuellement. Si rien n'est sélectionné, il prendra celui par défaut"
 
 msgctxt "model:account.journal,name:"
 msgid "Claim"
