--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -785,6 +785,10 @@ msgctxt "field:claim.indemnification,journal:"
 msgid "Journal"
 msgstr "Journal"
 
+msgctxt "field:claim.indemnification,journal_process_method:"
+msgid "Journal Process Method"
+msgstr "Méthode de traitement du journal"
+
 msgctxt "field:claim.indemnification,kind:"
 msgid "Kind"
 msgstr "Type de donnée"
@@ -1569,9 +1573,9 @@ msgid ""
 "Accounting products available when creating a new indemnification. Account "
 "and taxes that apply to the benefit are defined in an accounting product"
 msgstr ""
-"Produits comptables disponibles lorsque l'on créé une indemnisation. Le compte "
-"comptable et les taxes qui s'appliquent à l'indemnisation sont définis "
-"dans un produit comptable. "
+"Produits comptables disponibles lorsque l'on créé une indemnisation. Le "
+"compte comptable et les taxes qui s'appliquent à l'indemnisation sont "
+"définis dans un produit comptable. "
 
 msgctxt "help:claim,immediate_payback:"
 msgid ""
