--- a/modules/country_cog/doc/fr/CHANGELOG
+++ b/modules/country_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11929 Ajout du code dans le nom de l'enregistrement d'un département
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
