--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add get_good_version_at_date method on revisionmixin
 * BUG#11845 Add transaction's database when generating the async tasks
 * FEA#11661 Add dedicated resources for APIs
 * BUG#11664 Add configuration on event type action to execute it just before the main transaction commit
