loan: Add compute_loan API (#2878)
Fix #11952

--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11952 Add an API for loan payment computations
+
 Version 2.4 - 2019-04-12
 * BUG#10808 Add loan end date in rule engine
 * BUG#10836 Fix get_share_per_loan method fail on loan order
