endorsement_option_benefit: fix display of some benefit endorsements (#2883)
Fix #11964

--- a/modules/endorsement_option_benefit/doc/fr/CHANGELOG
+++ b/modules/endorsement_option_benefit/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11964 Correction d'une erreur dans l'affichage de certains avenants de changements de prestations
+
 Version 2.4 - 2019-04-12
 * BUG#11042 Création des versions de garanties uniquement en cas de modification
 * BUG#10965 Correction de l'affichage de la fréquence d'indemnisation lorsqu'elle n'est pas imposée
