--- a/modules/endorsement_option_benefit/doc/en/CHANGELOG
+++ b/modules/endorsement_option_benefit/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11964 Fix error in display of some option benefit endorsements
+
 Version 2.4 - 2019-04-12
 * BUG#11042 Only create new option versions on modified options
 * BUG#10965 Fix annuity frequency display when it is not forced
