--- a/modules/account_payment_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11103 The payment date was not removed on failure if the payment was used to pay a different line than the original one
+
 Version 2.4 - 2019-04-12
 * BUG#11403 Fix crash on sorting function _process_payment_key due to None type comparison on python 3
 * BUG#11307 Fix crash on sorting function group_for_payment_cancellation due to None type comparison on python 3
