--- a/modules/contract_insurance_payment/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_payment/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11268 Le basculement en paiement manuel se fait désormais toujours à la date du rejet
+
 Version 2.4 - 2019-04-12
 * BUG#10962 Réinitialiser la valeur de la date de paiement sur les quittances de frais émis lorsqu'on passe à un paiement manuel sur contrat suite à un rejet
 * BUG#10526 Réinitialisation du jour de prélèvement lorsqu'on passe à un paiement manuel sur contrat en raison d'un échec
