--- a/modules/country_hexaposte/doc/en/CHANGELOG
+++ b/modules/country_hexaposte/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Remove error if testing mode when no subdivision found during zip code import
 * FEA#11926 Initialize zipcode subdivision when integrating hexapost zipcode
 * OTH#00000 Fix missing return in zip code get_rec_name
 * OTH#00000 Fix zip uniqueness and zip update via wizard
