document_request: Add comment field on document requests (#2865)
Fix #11908

--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11908 Add comment field on document request
 * BUG#11602 Enable document request creation from list view
 
 Version 2.4 - 2019-04-12
