--- a/modules/document_request/doc/fr/CHANGELOG
+++ b/modules/document_request/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11908 Ajouter un champ commentaire à la demande de document
 * BUG#11602 Permettre la création de demandes de documents depuis une vue liste
 
 Version 2.4 - 2019-04-12
