--- a/modules/document_request/locale/fr.po
+++ b/modules/document_request/locale/fr.po
@@ -139,8 +139,8 @@ msgid "Create User"
 msgstr "Créé par"
 
 msgctxt "field:document.request.line,details:"
-msgid "Details"
-msgstr "Détails"
+msgid "Comment"
+msgstr "Commentaire"
 
 msgctxt "field:document.request.line,document_desc:"
 msgid "Document Definition"
@@ -225,6 +225,10 @@ msgid ""
 msgstr ""
 "Si cochée, les pièces jointes seront requises afin de marquer les lignes de "
 "demande de document comme \"reçues\""
+
+msgctxt "help:document.request.line,details:"
+msgid "Add details about the received document"
+msgstr "Permet d'ajouter des précisions sur le document reçu"
 
 msgctxt "help:document.request.line,for_object:"
 msgid "References the object for which the document is asked."
