party_birth_data: add unit tests (#2854)
* add unit tests

--- a/modules/party_birth_data/doc/fr/CHANGELOG
+++ b/modules/party_birth_data/doc/fr/CHANGELOG
@@ -1,1 +1,2 @@
+* FEA#11631 Ajout des tests unitaires si le module party_ssn est installé
 * FEA#11631 Ajout de la commune de naissance pour une partie
