--- a/modules/party_public_employment/doc/en/CHANGELOG
+++ b/modules/party_public_employment/doc/en/CHANGELOG
@@ -1,2 +1,3 @@
+* FEA#11979 Hide work time type if the employee is retired
 * OTH#00000 Add subdivision work
 * FEA#11598 party public employment module creation
