--- a/modules/bank_mobility/doc/en/CHANGELOG
+++ b/modules/bank_mobility/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11981 Make select ids compliant with execute for bank mobility batch
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
