--- a/modules/bank_mobility/doc/fr/CHANGELOG
+++ b/modules/bank_mobility/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11981 Le select ids du batch de mobilité bancaire doit être conforme à l'execute
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
