--- a/modules/party_employment/doc/en/CHANGELOG
+++ b/modules/party_employment/doc/en/CHANGELOG
@@ -1,2 +1,3 @@
+* OTH#00000 Add party employment data in rule_engine
 * FEA#11598 Party employment module creation. This module allows to enter
 employment information.
