--- a/modules/party_employment/doc/fr/CHANGELOG
+++ b/modules/party_employment/doc/fr/CHANGELOG
@@ -1,1 +1,2 @@
+* OTH#00000 Ajout des données profesionnelles dans le moteur de règles
 * FEA#11598 Création du module. Ce module permet la gestion des données profesionnelles.
