--- a/modules/party_employment/locale/fr.po
+++ b/modules/party_employment/locale/fr.po
@@ -91,8 +91,8 @@ msgid "Employment"
 msgstr "Situation professionnelle"
 
 msgctxt "field:party.employment.version,gross_salary:"
-msgid "Gross Salary"
-msgstr "Salaire brut"
+msgid "Annual Gross Salary"
+msgstr "Salaire annuel brut"
 
 msgctxt "field:party.employment.version,id:"
 msgid "ID"
