--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12020 Correction de l'aide sur le champ Domaine sur la définition de la donnée complémentaire
 * FEA#11812 API de description d'un produit
 * FEA#11837 Ajout d'une séquence pour l'ordre des données complémentaires
 * OTH#00000 Ajout d'un message si la donnée complémentaire n'est pas trouvée
