claim_salary_fr : fix endorsement behavior for revaluation_on_basic_salary (#2912)
Fix #12038

--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12038 Fix endorsement behavior for the "Revaluation on basic salary" field
 * BUG#11767 Make sure default tables are up to date
 
 Version 2.4 - 2019-04-12
