claim_pasrau: fix message generation to remove duplicate lines  (#2923)
Fix #12042

--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12042 Correction de la génération du message pasrau pour empêcher les doublons de lignes
 * BUG#11421 Mise à jour de la grille des pasraus
 
 Version 2.4 - 2019-04-12
