--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12042 Fix pasrau message generation to prevent duplicate lines
 * BUG#11421 Update the default pasrau rates in xml
 
 Version 2.4 - 2019-04-12
