party_employment: add withholding data (#2892)

--- a/modules/party_employment/doc/fr/CHANGELOG
+++ b/modules/party_employment/doc/fr/CHANGELOG
@@ -1,2 +1,3 @@
+* FEA#12056 Ajout des données de précompte
 * OTH#00000 Ajout des données profesionnelles dans le moteur de règles
 * FEA#11598 Création du module. Ce module permet la gestion des données profesionnelles.
