--- a/modules/party_public_employment/doc/fr/CHANGELOG
+++ b/modules/party_public_employment/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12056 Ajout des données de précompte
 * FEA#11979 Masquer la durée de travail si l'employé est retraité
 * OTH#00000 Ajout de la donnée département de rattachement
 * FEA#11598 création de module party public employment
